@@ -11,6 +11,7 @@ Cobbler CHANGELOG
 - fix for NFS imported URLs during kickstart generation
 - added yumreposync_flags to settings, default "-l" for use plugins
 - added an extra mkdir for rhn's reposync, though I believe the -l cures it already
+- allow mod python bits to work via non-80 http ports
 
 - Wed Jun 03 2008 - 1.0.3
 - Fix error message output from failed kickstart rendering
